2022-03-07
 - Added more parameter checks and OAuth2Client web-service tests.
2022-03-17
 - Updated admin filter by using admin token and role checks.
2022-03-18
 - Added an OAuth2 admin API to delete expired/revoked access and refresh tokens.
2022-03-28
 - Updated admin filter (admintoken as a form param) and uses 
   it for the closing index reader API. 

# version 0.65.1

2022-03-01
 - Restricts the field retrieval web-service to admin only.

# version 0.65

!!! includes security updates - please update all Kustvakt libraries
!!! Please also update Krill to version 0.60.2 and Koral to version 0.38 

2021-12-02
 - Updated VC cache.
2021-12-03
 - Enabled listing system vc for authorized users.
2021-12-08
 - Removed koralQuery and statistics from VC list.
 - Added a web-service to retrieve KoralQuery of a VC
2021-12-10
 - [security] Updated log4j libs due to CVE-2021-44228.
2021-12-13
 - Fixed broken test suite.
2022-01-03
 - [security] More log4j security updates
 - Bumped unboundid-ldapsdk
 - Updated tests.
2022-01-25
 - Added show-tokens option to the search API.
2022-01-31
 - Added an API retrieving fields of a virtual corpus.

# version 0.64.1

2021-10-26
 - Bump Kustvakt and Krill versions.


# version 0.64
2021-07-29
 - Updated the change files and made a new version.
2021-08-12
 - Fixed errors due to missing query type and added tests.
2021-08-13
 - Fixed missing request entity.
 - Updated the query service to enable editing query references.
2021-08-16
 - Fixed creator param when storing query or VC by admins for 
  the system or other users.

# version 0.63.2
2021-06-11
 - Updated OAuth2 token length & secure random algorithm config.
 - Added character set filter to random code generator, e.g. for client_id.
2021-06-14
 - Updated roleId and super client parameters.
2021-06-24
 - Fixed broken test. 
2021-07-22
 - Updated cache settings and some loggings.
2021-07-26
 - Replaced annotation parsing with restoring the annotation tables to the
database.