@@ -3,6 +3,7 @@ package de.ids_mannheim.korap.oauth2.service;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import de.ids_mannheim.korap.exceptions.KustvaktException;
 import de.ids_mannheim.korap.oauth2.dao.AccessTokenDao;
 import de.ids_mannheim.korap.oauth2.dao.RefreshTokenDao;
 
@@ -13,12 +14,10 @@ public class OAuth2AdminService {
     private AccessTokenDao tokenDao;
     @Autowired
     private RefreshTokenDao refreshDao;
- 
-    
+
     public void cleanTokens () {
         tokenDao.deleteInvalidAccessTokens();
         refreshDao.deleteInvalidRefreshTokens();
+        tokenDao.clearCache();
     }
-
-    
 }
